// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignOwnProfileAction renders 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      key="assign-self"
      onClick={[Function]}
    >
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <p>
          This is my paper
        </p>
      </Tooltip>
    </MenuItem>
    <MenuItem
      data-test-id="unassign"
      key="unassign"
      onClick={[Function]}
    >
      This is not my paper
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`AssignOwnProfileAction renders disabled 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={true}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Please select the papers you want to claim or remove from the profile."
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      disabled={true}
      key="assign-self"
      onClick={[Function]}
    >
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="This paper is already claimed"
      >
        <p>
          This is my paper
        </p>
      </Tooltip>
    </MenuItem>
    <MenuItem
      data-test-id="unassign"
      key="unassign"
      onClick={[Function]}
    >
      This is not my paper
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`AssignOwnProfileAction renders plural form if numberOfSelected is more than 1 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      key="assign-self"
      onClick={[Function]}
    >
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <p>
          These are my papers
        </p>
      </Tooltip>
    </MenuItem>
    <MenuItem
      data-test-id="unassign"
      key="unassign"
      onClick={[Function]}
    >
      These are not my papers
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`AssignOwnProfileAction renders singular form if numberOfSelected is 1 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      key="assign-self"
      onClick={[Function]}
    >
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <p>
          This is my paper
        </p>
      </Tooltip>
    </MenuItem>
    <MenuItem
      data-test-id="unassign"
      key="unassign"
      onClick={[Function]}
    >
      This is not my paper
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`AssignOwnProfileAction renders with disabled assign action 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      disabled={true}
      key="assign-self"
      onClick={[Function]}
    >
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="This paper is already claimed"
      >
        <p>
          This is my paper
        </p>
      </Tooltip>
    </MenuItem>
    <MenuItem
      data-test-id="unassign"
      key="unassign"
      onClick={[Function]}
    >
      This is not my paper
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;
